test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyless-ephemeral-container-verification/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - name: net-monitor
      image: ghcr.io/lucchmielowski/hello:1.1.0
      imagePullPolicy: IfNotPresent
      command: ["sleep", "infinity"]
